improved lzw version